--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,11 @@ input:focus-visible {
   width: 1100px;
   position: relative;
 }
+@media (max-width: 426px) {
+  .main {
+    width: 100%;
+  }
+}
 .main-wrapper {
   background: url(/img/task-bg.png) no-repeat center/cover;
   align-items: center;
@@ -287,23 +292,48 @@ input:focus-visible {
   justify-content: center;
   align-items: center;
 }
-.main-cards-item-desk {
+.main-cards-item-title {
   font-weight: 700;
   font-size: 18px;
+}
+@media (max-width: 426px) {
+  .main-cards-item-title {
+    font-size: 15px;
+  }
+}
+.main-cards-item-title-sm-font {
+  font-size: 18px;
+}
+@media (max-width: 426px) {
+  .main-cards-item-title-sm-font {
+    font-size: 13px;
+  }
+}
+.main-cards-item-desc {
+  font-size: 15px;
+}
+.main-cards-item-desc-sm-font {
+  font-size: 15px;
+}
+@media (max-width: 426px) {
+  .main-cards-item-desc-sm-font {
+    font-size: 11px;
+    text-align: right;
+  }
 }
 .main-cards-item:nth-child(1) {
   position: relative;
   background: url(/img/task-item-bg-1.png) no-repeat center/cover;
-  width: 400px;
+  width: 340px;
   height: 250px;
 }
 .main-cards-item:nth-child(1)::before {
   content: "1";
   font-weight: 700;
-  font-size: 210px;
+  font-size: 182px;
   color: #1e0202;
   position: absolute;
-  right: 280px;
+  right: 230px;
   top: 50px;
   text-shadow: 2px 2px 0 rgba(122, 27, 27, 0.5803921569), 2px -2px 0 rgba(122, 27, 27, 0.5803921569), -2px 2px 0 rgba(122, 27, 27, 0.5803921569), -2px -2px 0 rgba(122, 27, 27, 0.5803921569), 2px 0px 0 rgba(122, 27, 27, 0.5803921569), 0px 2px 0 rgba(122, 27, 27, 0.5803921569), -2px 0px 0 rgba(122, 27, 27, 0.5803921569), 0px -2px 0 rgba(122, 27, 27, 0.5803921569), 2px 2px 2px rgba(206, 0, 0, 0);
 }
@@ -328,8 +358,8 @@ input:focus-visible {
   position: relative;
   top: -40px;
   background: url(/img/task-item-bg-2.png) no-repeat center/cover;
-  width: 400px;
-  height: 400px;
+  width: 340px;
+  height: 340px;
   flex-direction: column;
   color: #eee;
   padding-top: 100px;
@@ -346,9 +376,14 @@ input:focus-visible {
   font-size: 200px;
   color: #f0c9c9;
   position: absolute;
-  right: 280px;
+  right: 260px;
   top: 170px;
   text-shadow: 2px 2px 0 gray, 2px -2px 0 gray, -2px 2px 0 gray, -2px -2px 0 gray, 2px 0px 0 gray, 0px 2px 0 gray, -2px 0px 0 gray, 0px -2px 0 gray, 2px 2px 2px rgba(206, 0, 0, 0);
+}
+@media (max-width: 426px) {
+  .main-cards-item:nth-child(2)::before {
+    right: 240px;
+  }
 }
 .main-cards-item:nth-child(2)::after {
   content: "";
@@ -357,7 +392,7 @@ input:focus-visible {
   width: 225px;
   height: 225px;
   right: -390px;
-  top: -30;
+  top: 20px;
 }
 @media (max-width: 426px) {
   .main-cards-item:nth-child(2)::after {
@@ -383,6 +418,9 @@ input:focus-visible {
 @media (max-width: 426px) {
   .main-cards-item:nth-child(3) {
     margin-left: 0px;
+    width: 340px;
+    height: 260px;
+    top: -120px;
   }
 }
 .main-cards-item:nth-child(3)::before {
@@ -394,6 +432,12 @@ input:focus-visible {
   right: 370px;
   top: 220px;
   text-shadow: 2px 2px 0 rgba(122, 27, 27, 0.5803921569), 2px -2px 0 rgba(122, 27, 27, 0.5803921569), -2px 2px 0 rgba(122, 27, 27, 0.5803921569), -2px -2px 0 rgba(122, 27, 27, 0.5803921569), 2px 0px 0 rgba(122, 27, 27, 0.5803921569), 0px 2px 0 rgba(122, 27, 27, 0.5803921569), -2px 0px 0 rgba(122, 27, 27, 0.5803921569), 0px -2px 0 rgba(122, 27, 27, 0.5803921569), 2px 2px 2px rgba(206, 0, 0, 0);
+}
+@media (max-width: 426px) {
+  .main-cards-item:nth-child(3)::before {
+    left: 30px;
+    top: 100px;
+  }
 }
 .main-cards-item:nth-child(3)::after {
   content: "";
@@ -441,9 +485,14 @@ input:focus-visible {
   justify-content: center;
 }
 .section-cards-item {
-  width: 100%;
+  width: 30%;
   display: flex;
   flex-direction: column;
+}
+@media (max-width: 426px) {
+  .section-cards-item {
+    width: 100%;
+  }
 }
 .section-cards-item-poster {
   width: 100%;
@@ -457,12 +506,22 @@ input:focus-visible {
 .section-cards-item-desc {
   color: #fff;
 }
+@media (max-width: 426px) {
+  .section-cards-item-switch {
+    display: none;
+  }
+}
 .section-more {
   border-radius: 27px;
   width: 184px;
   height: 63px;
 }
 
+@media (max-width: 426px) {
+  .reviews {
+    height: 1150px;
+  }
+}
 @media (max-width: 426px) {
   .reviews-conatainer-parent-icons {
     display: flex;
@@ -473,6 +532,7 @@ input:focus-visible {
   background: url(/img/task-bg.png) no-repeat center/cover;
 }
 .reviews-cards-item {
+  text-align: center;
   position: relative;
 }
 .reviews-cards-item-poster {
@@ -481,12 +541,110 @@ input:focus-visible {
 .reviews-cards-item-comment {
   position: absolute;
 }
+@media (max-width: 426px) {
+  .reviews-cards-item-comment-poster-1 {
+    top: 575px;
+    left: 30px;
+    position: absolute;
+  }
+}
+@media (max-width: 426px) {
+  .reviews-cards-item-comment-poster-2 {
+    top: 200px;
+    left: -10px;
+    position: absolute;
+  }
+}
+.reviews-cards-item-comment-author {
+  font-weight: 700;
+  font-size: 18px;
+}
+@media (max-width: 426px) {
+  .reviews-cards-item-comment-author-1 {
+    position: absolute;
+    top: 630px;
+    left: 90px;
+    width: 200px;
+  }
+}
+@media (max-width: 426px) {
+  .reviews-cards-item-comment-author-2 {
+    position: absolute;
+    top: 250px;
+    left: 60px;
+    width: 200px;
+  }
+}
+.reviews-cards-item-comment-desc {
+  font-size: 16px;
+}
+@media (max-width: 426px) {
+  .reviews-cards-item-comment-desc {
+    font-size: 13px;
+  }
+}
+@media (max-width: 426px) {
+  .reviews-cards-item-comment-desc-1 {
+    position: absolute;
+    top: 670px;
+    left: 100px;
+    width: 170px;
+  }
+}
+@media (max-width: 426px) {
+  .reviews-cards-item-comment-desc-2 {
+    position: relative;
+    left: 100px;
+    width: 170px;
+  }
+}
+.reviews-cards-item-comment-line-1 {
+  width: 200px;
+  position: absolute;
+  background: #000;
+  height: 2px;
+  top: 240px;
+  left: 90px;
+  z-index: 2;
+}
+.reviews-cards-item-comment-line-2 {
+  width: 200px;
+  position: absolute;
+  background: #000;
+  height: 2px;
+  top: 660px;
+  left: 90px;
+}
+@media (max-width: 426px) {
+  .reviews-cards-item-2 {
+    left: 30px;
+    bottom: 50px;
+  }
+}
+@media (max-width: 426px) {
+  .reviews-cards-item-3 {
+    display: none;
+  }
+}
 .reviews-1 {
   left: 6%;
+}
+@media (max-width: 426px) {
+  .reviews-1 {
+    height: 420px;
+    top: 300px;
+  }
 }
 .reviews-2 {
   left: 39%;
   top: 80%;
+}
+@media (max-width: 426px) {
+  .reviews-2 {
+    height: 400px;
+    top: -50%;
+    left: 0%;
+  }
 }
 .reviews-3 {
   left: 75%;
@@ -505,6 +663,7 @@ input:focus-visible {
   .reviews-cooperation-container {
     width: 102vw;
     margin-left: -30px;
+    margin-top: 700px;
   }
 }
 .reviews-cooperation-container-inside {
@@ -521,6 +680,7 @@ input:focus-visible {
   .reviews-cooperation-container-inside {
     width: 100%;
     flex-direction: column;
+    height: 700px;
   }
 }
 .reviews-cooperation-container-title {
@@ -529,6 +689,11 @@ input:focus-visible {
   color: #f3d5d5;
   width: 300px;
 }
+@media (max-width: 426px) {
+  .reviews-cooperation-container-title {
+    width: 190px;
+  }
+}
 .reviews-cooperation-container-shape {
   border: 2px solid #000;
   width: 558px;
@@ -536,7 +701,7 @@ input:focus-visible {
 }
 @media (max-width: 426px) {
   .reviews-cooperation-container-shape {
-    width: 100%;
+    width: 260px;
   }
 }
 .reviews-cooperation-container-desc {
@@ -547,14 +712,25 @@ input:focus-visible {
 }
 @media (max-width: 426px) {
   .reviews-cooperation-container-desc {
-    width: 100%;
+    width: 270px;
   }
 }
 .reviews-cooperation-container-icon-1 {
   margin-bottom: 40px;
 }
+@media (max-width: 426px) {
+  .reviews-cooperation-container-icon-1 {
+    margin-top: 270px;
+    margin-bottom: 0px;
+  }
+}
 .reviews-cooperation-container-icon-3 {
   margin-bottom: 45px;
+}
+@media (max-width: 426px) {
+  .reviews-cooperation-container-icon-3 {
+    margin-bottom: 0px;
+  }
 }
 .reviews-cooperation-container-contact {
   border-radius: 27px;
@@ -568,6 +744,13 @@ input:focus-visible {
   margin-left: 50px;
   transition: 0.5s;
 }
+@media (max-width: 426px) {
+  .reviews-cooperation-container-contact {
+    margin-top: 400px;
+    margin-left: 75px;
+    position: absolute;
+  }
+}
 
 .footer {
   display: flex;
@@ -577,6 +760,11 @@ input:focus-visible {
 .footer-wrapper {
   background: #020202;
   padding: 34px 0px;
+}
+@media (max-width: 426px) {
+  .footer-wrapper {
+    display: none;
+  }
 }
 .footer-name {
   color: #FF0000;
@@ -722,7 +910,7 @@ input:focus-visible {
     height: 30px;
   }
   .header-circle-gradient-text-1 {
-    left: -90px;
+    left: -60px;
     top: 380px;
     width: 140px;
     font-weight: 700;
